Material friction settings are ignored #33769

Closed
opened 2013-01-05 08:25:43 +01:00 by Alex Fraser · 3 comments
Member

Category: Physics

%%%--- Operating System, Graphics card ---
Ubuntu 12.10
ATI Manhattan [Mobility Radeon HD 5430 Series]

- Blender version with error, and version that worked ---

2.65.5 r53568 (bug)
2.65a (works)

- Short description of error ---

In recent builds, material friction settings seem to be ignored by the game engine. It looks like it is always set to 0.5.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached blend file
  2. Start the game.

The blocks should slide down the plane by varying amounts. The one on the left should slide freely; the one in the middle should slide a bit, and the one on the right should not slide much at all. That's what happens in 2.65a, but in r53586 they all stay put.%%%

**Category**: Physics %%%--- Operating System, Graphics card --- Ubuntu 12.10 ATI Manhattan [Mobility Radeon HD 5430 Series] - Blender version with error, and version that worked --- 2.65.5 r53568 (bug) 2.65a (works) - Short description of error --- In recent builds, material friction settings seem to be ignored by the game engine. It looks like it is always set to 0.5. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open attached blend file 2. Start the game. The blocks should slide down the plane by varying amounts. The one on the left should slide freely; the one in the middle should slide a bit, and the one on the right should not slide much at all. That's what happens in 2.65a, but in r53586 they all stay put.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r53576.%%%

%%%Fixed in r53576.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33769
No description provided.