BGE: Fix for [#33769] "Material friction settings are ignored" reported by Alex Fraser (z0r).

As of r53332, give_current_material() won't accept a 0 index and return NULL. CreateMaterialFromBlenderObject() was using index 0 to just grab the first material. Since this now returned NULL, it would use default settings. We'll just ask for index 1 now instead.